css accessibility contrast fix

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1690,7 +1690,7 @@
 		}
 
 	.timestamp {
-		color: rgba(128, 128, 128, 0.75);
+		color: #fff;
 		font-size: 0.8em;
 	} 
 
